1-rabbitmq.yaml
# RabbitMQ
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.6-management-alpine

---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
spec:
    selector:
      app: rabbitmq

    ports:
      # HTTP management UI
      - name: http
        port: 15672
      # The standard AMQP protocol port
      - name: amqp
        port: 5672
      - name: endpoint1
        port: 5671
      - name: endpoint2
        port: 15671
      - name: endpoint3
        port: 4369
    type: ClusterIP # TODO: change to ClusterIP later to disable from outside
