2-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: tonyhe2k/config-server
---
apiVersion: v1
kind: Service
metadata:
    name: config-server
spec:
    selector:
      app: config-server

    ports:
      - name: http
        port: 8012

    type: ClusterIP
