5-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: tonyhe2k/k8s-api-gateway
---
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
spec:
    selector:
      app: api-gateway

    ports:
      - name: http
        port: 8011

    type: ClusterIP
