6-custmer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - name: customer-service
        image: tonyhe2k/k8s-customer-service
---
apiVersion: v1
kind: Service
metadata:
    name: customer-service
spec:
    selector:
      app: customer-service
    ports:
      - name: http
        port: 8080

    type: ClusterIP
