ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
spec:
  rules:
    - host: minikube
      http:
        paths:
          - path: /
            backend:
              serviceName: istore-angular-ui
              servicePort: 80

    - host: queue.minikube
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: 15672

    # - host: api-gateway.minikube
    #   http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: api-gateway
    #           servicePort: 8011

    - host: customer-service.minikube
      http:
        paths:
          - path: /
            backend:
              serviceName: customer-service
              servicePort: 8080
